--- a/index.html
+++ b/index.html
@@ -4,92 +4,92 @@
     <meta charset="UTF-8" />
     <title>OSM Mapmaking</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="shortcut icon" href="/assets/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
-    <link rel="manifest" href="/assets/manifest.json" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+    <link rel="manifest" href="assets/manifest.json" />
     <base href="https://avg206.github.io/osm-mapmaking/" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#fff" />
     <meta name="application-name" content="osm-mapmaking" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/assets/apple-touch-icon-167x167.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-180x180.png" />
-    <link rel="apple-touch-icon" sizes="1024x1024" href="/assets/apple-touch-icon-1024x1024.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="assets/apple-touch-icon-167x167.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="1024x1024" href="assets/apple-touch-icon-1024x1024.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="osm-mapmaking" />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)"
-      href="/assets/apple-touch-startup-image-320x460.png"
+      href="assets/apple-touch-startup-image-320x460.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)"
-      href="/assets/apple-touch-startup-image-640x920.png"
+      href="assets/apple-touch-startup-image-640x920.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
-      href="/assets/apple-touch-startup-image-640x1096.png"
+      href="assets/apple-touch-startup-image-640x1096.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
-      href="/assets/apple-touch-startup-image-750x1294.png"
+      href="assets/apple-touch-startup-image-750x1294.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 414px) and (device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3)"
-      href="/assets/apple-touch-startup-image-1182x2208.png"
+      href="assets/apple-touch-startup-image-1182x2208.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)"
-      href="/assets/apple-touch-startup-image-1242x2148.png"
+      href="assets/apple-touch-startup-image-1242x2148.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 1)"
-      href="/assets/apple-touch-startup-image-748x1024.png"
+      href="assets/apple-touch-startup-image-748x1024.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)"
-      href="/assets/apple-touch-startup-image-768x1004.png"
+      href="assets/apple-touch-startup-image-768x1004.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)"
-      href="/assets/apple-touch-startup-image-1496x2048.png"
+      href="assets/apple-touch-startup-image-1496x2048.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)"
-      href="/assets/apple-touch-startup-image-1536x2008.png"
+      href="assets/apple-touch-startup-image-1536x2008.png"
     />
-    <link rel="icon" type="image/png" sizes="228x228" href="/assets/coast-228x228.png" />
+    <link rel="icon" type="image/png" sizes="228x228" href="assets/coast-228x228.png" />
     <meta name="msapplication-TileColor" content="#28509F" />
-    <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
-    <meta name="msapplication-config" content="/assets/browserconfig.xml" />
-    <link href="/3.057754d6f8c478f60cc9.css" rel="stylesheet" />
-    <link href="/0.057754d6f8c478f60cc9.css" rel="stylesheet" />
-    <link href="/1.057754d6f8c478f60cc9.css" rel="stylesheet" />
+    <meta name="msapplication-TileImage" content="assets/mstile-144x144.png" />
+    <meta name="msapplication-config" content="assets/browserconfig.xml" />
+    <link href="3.057754d6f8c478f60cc9.css" rel="stylesheet" />
+    <link href="0.057754d6f8c478f60cc9.css" rel="stylesheet" />
+    <link href="1.057754d6f8c478f60cc9.css" rel="stylesheet" />
   </head>
   <body>
     <section id="root"></section>
-    <script src="/runtime.52aeacc53415380746a1.js"></script>
-    <script src="/vendor.598d63e2af1b82d7f9e0.js"></script>
-    <script src="/juno.8aa21e907d69c752b934.js"></script>
-    <script src="/main.a0d8fea10d3b4951eb07.js"></script>
+    <script src="runtime.52aeacc53415380746a1.js"></script>
+    <script src="vendor.598d63e2af1b82d7f9e0.js"></script>
+    <script src="juno.8aa21e907d69c752b934.js"></script>
+    <script src="main.a0d8fea10d3b4951eb07.js"></script>
   </body>
 </html>
 <!--  -->
